:sparkles: Add a price command that returns price of specific coin

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,8 @@ main: io.github.hibixby.spigotpluginstudy.SpigotPluginStudy
 api-version: 1.19
 authors: [ Hey_Siri_ ]
 description: Spigot plugin study
+commands:
+  price:
+    description: get price of coin
+    aliases: [cp,coinprice]
+    usage: /<command>
