✨ Add aliasess of the coinprice command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,5 +7,5 @@ description: trading cryptocurrency
 commands:
   coinprice:
     description: get price of coin
-    aliases: [cp,price]
+    aliases: [cp,cprice,price]
     usage: /<command>
